Actualizar comentarios en controladores y archivos .gitignore
